cp-to-cc-clusterlinking/nginx-ingress-hostbased-sni.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-sni
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kafka.hca.selabs.net
        - b0.hca.selabs.net
        - b1.hca.selabs.net
        - b2.hca.selabs.net
        - controlcenter.hca.selabs.net
        - ksqldb.hca.selabs.net
        - connect.hca.selabs.net
        # - cloudclink-src0.hca.selabs.net
        # - cloudclink-src1.hca.selabs.net
        # - cloudclink-src2.hca.selabs.net
  rules:
    - host: kafka.hca.selabs.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-bootstrap
                port: 
                  number: 9092
    - host: b0.hca.selabs.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: kafka-0-internal
                port:
                  number: 9092
    - host: b1.hca.selabs.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-1-internal
                port: 
                  number: 9092
    - host: b2.hca.selabs.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-2-internal
                port: 
                  number: 9092
    # - host: cloudclink-src0.hca.selabs.net
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service: 
    #             name: kafka-0-internal
    #             port:
    #               number: 9092
    # - host: cloudclink-src1.hca.selabs.net
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: kafka-1-internal
    #             port: 
    #               number: 9092
    # - host: cloudclink-src2.hca.selabs.net
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: kafka-2-internal
    #             port: 
    #               number: 9092
    - host: controlcenter.hca.selabs.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: controlcenter-0-internal
                port: 
                  number: 9021
    - host: ksqldb.hca.selabs.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ksqldb-bootstrap
                port: 
                  number: 8088
    - host: connect.hca.selabs.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: connect-bootstrap
                port: 
                  number: 8083
